@@ -15,8 +15,7 @@ setup(name="software-store", version='0.2',
                  ],
       data_files=[
                   ('share/software-store/ui/',
-                   ["data/ui/SoftwareStore.ui",
-                   ]),
+                   glob.glob("data/ui/*.ui")),
                   ('share/software-store/templates/',
                    glob.glob("data/templates/*.html")),
                   ],
