@@ -3,6 +3,8 @@ software-store (0.2.3) UNRELEASEDkarmic; urgency=low
   * merged from rugby471:
     - documentation updates
     - i18n fixes
+  * softwarestore/view/gbwidget.py:
+    - add new Gtkbuilder widget base class
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Sep 2009 11:23:58 +0200
 
@@ -104,7 +106,7 @@ software-store (0.1.2) karmic; urgency=low
     - render the category text one pango shrink step smaller
   * softwarestore/view/appdetailsview.py:
     - ignore dbus errors resulting from canceling the authentication
-      dialog (LP: #412269)
+      dialog 
   * softwarestore/view/catview.py:
     - fix crash in non english languages when parsing the 
       applications.menu (LP: #419356)
